# PWSAST

./: Cargo.toml  log4rs.yml
assets/: datatables.min.css  datatables.min.js
config/: app.yaml
src/: error.rs  main.rs  prelude.rs
src/config/: config.rs
src/controllers/html/: html.rs  mod.rs
src/controllers/html/scripts/: mod.rs  scripts_controller.rs
templates/: 403.html  404.html  index.html  upload.html
