[package]
name = "PowershellSAST"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = {  version = "0.7.4", features = ["macros", "multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
dotenv = "0.15.0"
env_logger = "0.11.1"
hyper = { version = "1.1.0" , features = ["full"] }
log = "0.4.20"
log4rs = "1.2.0"
openssl = { version = "0.10.63"}
prelude = "0.2.1"
rand = "0.8.5"
serde = "1.0.196"
serde_json = "1.0.113"
thiserror = "1.0.56"
tokio = { version="1.35.1", features = ["full"] }
tower = { version="0.4.13", features = ["full"] }
tower-http = { version="0.5.1", features = ["cors", "trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
twelf = { version = "0.13.0", features = ["yaml"] }